@@ -17,6 +17,7 @@
 * Paymill gateway: Change .com -> .de [louiskearns]
 * Quickpay integration: Fix v6 response parsing [larspind]
 * First Data e4: Add TransArmor store/tokenization support [gabetax]
+* MerchantWarrior: Format expiration month/year correctly [klebervirgilio]
 
 == Version 1.32.1 (April 4, 2013)
 
